tutorials/v17.1.3/如何在被挖掘的方块上种植植物.md
# 如何在shoveled block 上种植V17.1.3

本文档创建于2023年1月19日，埃德蒙顿，加拿大

**重要** V17.1.3 重写了有关耕地和种子所有代码，如果你在之前的开发中使用了v17.1.2及更古老的版本，请马上将版本升级到v17.1.3。 需要更改的地方并不多。



## 种植植物

### 进一步修改随机刻

重要在v17.1.3版本之后，耕地必须具有IntProperty MOISTURE, 否则作物生长非常缓慢

这边的数值是可以自定义的，原版耕地湿度数值是写死的

```
com.wzssoft.modid.block.common.ShoveledGrassBlock.java
```

```java
public class ShoveledGrassBlock extends AbstractShoveledBlock {

    public static final int MAX_MOISTURE = 5;
    public static final IntProperty MOISTURE = IntProperty.of("moisture", 0, MAX_MOISTURE);

    public ShoveledGrassBlock(Settings settings) {
        super(settings);
        this.setDefaultState(this.stateManager.getDefaultState().with(MOISTURE, 0));
    }

    @Override
    public boolean hasRandomTicks(BlockState state) {
        return true;
    }

    @Override
    public void randomTick(BlockState state, ServerWorld world, BlockPos pos, Random random) {
        int i = state.get(MOISTURE);
        if (this.isWaterNearBy(world, pos) || world.hasRain(pos.up())) {
            if (i < MAX_MOISTURE) {
                world.setBlockState(pos, (BlockState) state.with(MOISTURE, MAX_MOISTURE), Block.NOTIFY_LISTENERS);
            }
        } else if (i > 0) {
            world.setBlockState(pos, (BlockState) state.with(MOISTURE, i - 1), Block.NOTIFY_LISTENERS);
        } else if (this.hasAirOnTop(world, pos)) {

            //如果是没有花，且湿度为0则转换成默认方块
            this.setToOriginalBlock(world, pos);
        }
    }

    private boolean isWaterNearBy(World world, BlockPos pos) {
        for (BlockPos blockPos : BlockPos.iterate(pos.add(-2, 0, -2), pos.add(2, 1, 2))) {
            if (!world.getFluidState(blockPos).isIn(FluidTags.WATER)) continue;
            return true;
        }
        return false;
    }
    
        @Override
    protected void appendProperties(StateManager.Builder<Block, BlockState> builder) {
        builder.add(MOISTURE);
    }
}
```



### 注册耕地标签

v17.1.3 update: 现在不需要去Implement Farmland 的接口, 因为那样会让整段代码显得臃肿。在v17.1.3 版本作者重写了有关耕地部分的所有代码。





### 注册土地湿度属性

v17.1.3 update:  现在只需要去Tag中添加任意方块使其可以像耕地一样种植作物，但是这个耕地标签是伪耕地，它只能让你种东西，但是却不能让作物进行生长。我们需要为其注册土地湿度属性。











### ~~让方块可以种植植物~~

```
com.wzssoft.modid.utils.complexloottable.GrassBlockComplexLootTable.java
```

此词条已过期，注册耕地标签的方块都可种植植物



v17.1.3 update:  实现ImplementAbstractShoveledBlock的方块默认可以种植花朵

v17.0.5 update:  花种子放置不再判断亮度



### ~~让种植在上方的植物/幼苗可以存活~~

```
com.wzssoft.modid.utils.MODIDConstant.java
```

此词条已过期，可以种植在此方块上的物品都可存活



## 补充

### 自定义种子/植物

如果你只希望它种植在 **特定的方块** 上面，请 **重写** 以下方法

具体请查看反编译后的源码

```java
//是否可以种植在特定方块上面
@Override
protected boolean canPlantOnTop(BlockState floorState, BlockView world, BlockPos floorPos) {
   ....
}
```



### ~~种植原版中的作物~~

此词条已过期，含有耕地标签的方块可以种植原版的的作物方块和小型花

如果的作物属于其他类型，则需要去修改对应的Mixin



### ~~自定义耕地方块~~

此词条已过期，查看教程 **注册耕地标签**





