tutorials/v17.1.7/如何在被挖掘的方块上种植植物.md
# 如何在shoveled block 上种植V17.1.7

本文档创建于2023年1月19日，埃德蒙顿，加拿大

**重要** V17.1.3 重写了有关耕地和种子所有代码，如果你在之前的开发中使用了v17.1.2及更古老的版本，请马上将版本升级到v17.1.3。 需要更改的地方并不多。

重要V17.1.7强化了有关耕地的代码，如果你在之前的开发中使用了v17.1.6及更古老的版本，请马上将版本升级到v17.1.7。 需要更改的地方并不多。



## 种植植物

### 进一步修改随机刻

重要在v17.1.3版本之后，**耕地必须具有IntProperty MOISTURE**, 否则作物生长非常缓慢

这边的数值是可以自定义的，原版耕地湿度数值是写死的

```
com.wzssoft.modid.block.common.ShoveledGrassBlock.java
```

```java
public class ShoveledGrassBlock extends AbstractShoveledBlock {

    public static final int MAX_MOISTURE = 5;
    public static final IntProperty MOISTURE = IntProperty.of("moisture", 0, MAX_MOISTURE);

    public ShoveledGrassBlock(Settings settings) {
        super(settings);
        this.setDefaultState(this.stateManager.getDefaultState().with(MOISTURE, 0));
    }

    @Override
    public boolean hasRandomTicks(BlockState state) {
        return true;
    }

     @Override
    public void randomTick(BlockState state, ServerWorld world, BlockPos pos, Random random) {
        int i = state.get(MOISTURE);
        if (this.isWaterNearBy(world, pos) || world.hasRain(pos.up())) {
            if (i < MAX_MOISTURE) {
                world.setBlockState(pos, (BlockState) state.with(MOISTURE, MAX_MOISTURE), Block.NOTIFY_LISTENERS);
            }
        } else if (i > 0) {
            world.setBlockState(pos, (BlockState) state.with(MOISTURE, i - 1), Block.NOTIFY_LISTENERS);
        } else if (hasPlants(world, pos)) {

            //如果是没有花，且湿度为0则转换成默认方块
            this.setToOriginalBlock(world, pos);
        }
    }

    public static boolean hasPlants(BlockView world, BlockPos pos){
        Block block = world.getBlockState(pos.up()).getBlock();
        return block instanceof PlantBlock;
    }

    private boolean isWaterNearBy(World world, BlockPos pos) {
        for (BlockPos blockPos : BlockPos.iterate(pos.add(-2, 0, -2), pos.add(2, 1, 2))) {
            if (!world.getFluidState(blockPos).isIn(FluidTags.WATER)) continue;
            return true;
        }
        return false;
    }


    @Override
    protected void appendProperties(StateManager.Builder<Block, BlockState> builder) {
        builder.add(MOISTURE);
    }
}
```



### 注册耕地标签

v17.1.3 update: 现在不需要去Implement Farmland 的接口, 因为那样会让整段代码显得臃肿。在v17.1.3 版本作者重写了有关耕地部分的所有代码。

在 resources\data\treasurehuntlib\tags\blocks\farmland.json 中添加以下代码

```json
  {
      "replace": false,
          "values": [
      "modid:shoveled_grass_block"
		]
  }
```

注册完耕地标签后，所有农作物比如胡萝卜土豆小麦等都可以种植在上面

但是像西瓜藤这样的方块不能，你需要去使用Mixin重写其中的判断



## 补充

### 自定义种子/植物

如果你只希望它种植在 **特定的方块** 上面，请 **重写** 以下方法

```java
//是否可以种植在特定方块上面
@Override
protected boolean canPlantOnTop(BlockState floorState, BlockView world, BlockPos floorPos) {
   ....
}
```



## 你知道嘛

花种子可以种植在任意 ImplementedShoveledBlock 的方块上



